--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
       <artifactId>jetty-server</artifactId>
       <version>11.0.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-server</artifactId>
+      <version>3.0.1</version>
+    </dependency>
   </dependencies>
 </project>
