--- a/pom.xml
+++ b/pom.xml
@@ -63,4 +63,24 @@
             
         </dependency>
   </dependencies>
+  <build>
+        <finalName>JerseyJettyEx</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.5.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>src.main.java.App.ServerT</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
