--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,12 @@
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
             <version>9.4.0.v20161208</version>
-            
+        </dependency>
+        
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlets</artifactId>
+            <version>9.4.35.v20201120</version>
         </dependency>
   </dependencies>
   <build>
