--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>jetty-servlets</artifactId>
             <version>9.4.35.v20201120</version>
         </dependency>
+        <dependency>
+    		<groupId>com.googlecode.json-simple</groupId>
+    		<artifactId>json-simple</artifactId>
+    		<version>1.1</version>
+  		</dependency>
   </dependencies>
   <build>
         <finalName>JerseyJettyEx</finalName>
